--- a/templates/ggekos/index.html.twig
+++ b/templates/ggekos/index.html.twig
@@ -62,17 +62,17 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">{{ values.person.last_name }}
-            <span class="text-primary">{{ values.person.first_name }}</span>
+          <h1 class="mb-0">{{ person.last_name }}
+            <span class="text-primary">{{ person.first_name }}</span>
           </h1>
           <div class="subheading mb-5">
-            <a href="mailto:name@email.com">{{ values.person.email }}</a>
+            <a href="mailto:name@email.com">{{ person.email }}</a>
           </div>
-          <p class="mb-5">{{ values.person.title }}
+          <p class="mb-5">{{ person.title }}
           </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="{{ values.social.facebook }}" target="blank">
+              <a href="{{ social.facebook }}" target="blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -80,7 +80,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="{{ values.social.twitter }}" target="blank">
+              <a href="{{ social.twitter }}" target="blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="{{ values.social.linkedin }}" target="blank">
+              <a href="{{ social.linkedin }}" target="blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -96,7 +96,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="{{ values.social.github }}" target="blank">
+              <a href="{{ social.github }}" target="blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -111,7 +111,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
-            {% for experience in values.experience %}
+            {% for experience in experience %}
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                     <h3 class="mb-0">{{ experience.title }}</h3>
@@ -174,7 +174,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>{{ values.person.interest }}</p>
+          <p>{{ person.interest }}</p>
           <p class="mb-0"></p>
         </div>
       </section>
@@ -183,7 +183,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Links</h2>
           <ul class="fa-ul mb-0">
-            {% for link in values.links %}
+            {% for link in links %}
                 <li><a href="{{ link.url }}" target="blank">{{ link.name }}</a></li>
             {% endfor %}
           </ul>
