--- a/templates/ggekos/single.html.twig
+++ b/templates/ggekos/single.html.twig
@@ -1,5 +1,5 @@
 <h1>{{ title }}</h1>
-<p>{{ description }}</p>
+<p>{{ description|markdown }}</p>
 <p>{{ date }}</p>
 
 <a href="{{ path('blogList') }}">List</a>
