--- a/templates/ggekos/index.html.twig
+++ b/templates/ggekos/index.html.twig
@@ -66,7 +66,7 @@
             <span class="text-primary">{{ person.first_name }}</span>
           </h1>
           <div class="subheading mb-5">
-            <a href="mailto:name@email.com">{{ person.email }}</a>
+            <a href="mailto:{{ person.email }}">{{ person.email }}</a>
           </div>
           <p class="mb-5">{{ person.title }}
           </p>
