--- a/templates/ggekos/index.html.twig
+++ b/templates/ggekos/index.html.twig
@@ -24,7 +24,7 @@
                         <li><a href="#hello">Bonjour</a></li>
                         <li><a href="#skills">Compétences</a></li>
                         <li><a href="#experience">Expériences</a></li>
-                        <li><a href="{{ path('blogList') }}">Blog</a></li>
+                        {# <li><a href="{{ path('blogList') }}">Blog</a></li> #}
                     </ul>
                 </div>
             </div>
