--- a/templates/ggekos/index.html.twig
+++ b/templates/ggekos/index.html.twig
@@ -68,7 +68,7 @@
                     </div>
                     <div class="about-me-info">
                         <p>
-                            <span class="span-title">Phone</span>
+                            <span class="span-title">Téléphone</span>
                             <span>{{ person.phone }}</span>
                         </p>
                         <p>
@@ -76,7 +76,7 @@
                             <span>{{ person.email }}</span>
                         </p>
                         <p>
-                            <span class="span-title">Public key</span>
+                            <span class="span-title">Clé public</span>
                             <span><a href="{{ person.email_pgp }}">link</a></span>
                         </p>
                         <p>
@@ -125,7 +125,7 @@
                 <div class="section-sidebar">
                     <h2><span class="point">Compétences</span></h2>
                     <div class="opacity-box">
-                        <p>BackEnd, FrontEnd, Devops, Lead, Management</p>
+                        <p>Back End, Front End, DevOps, Lead, Management</p>
                     </div>
                 </div>
             </div>
@@ -133,9 +133,9 @@
                 <div class="row">
                     <div class="col-md-6 wow zoomIn">
                         <div class="advantages-box">
-                            <h4>Developpement Web</h4>
+                            <h4>Developpement</h4>
                             <div class="opacity-box">
-                                <p>Symfony, Rails, EmberJs, VueJs.</p>
+                                <p>Symfony, Python, Express, Ember, Vue.</p>
                             </div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                         <div class="advantages-box">
                             <h4>DevOps</h4>
                             <div class="opacity-box">
-                                <p>Ansible, Terraform, AWS.</p>
+                                <p>Ansible, Jenkins, Rundeck, Docker, Terraform.</p>
                             </div>
                         </div>
                     </div>
@@ -155,6 +155,16 @@
                             <h4>Management</h4>
                             <div class="opacity-box">
                                 <p>Agile, Scrum.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 wow zoomIn">
+                        <hr>
+                        <div class="advantages-box">
+                            <h4>Cloud</h4>
+                            <div class="opacity-box">
+                                <p>Azure, AWS.</p>
                             </div>
                         </div>
                     </div>
@@ -199,7 +209,7 @@
                                 <p class="about-info">{{ experience.name }}</p>
                                 <p>{{ experience.start }} - {{ experience.end }}</p>
                                 <div class="opacity-box">
-                                    <p>{{ experience.info }}</p>
+                                    <p>{{ experience.info|nl2br }}</p>
                                 </div>
                             </div>
                         </div>
@@ -264,7 +274,7 @@
         <div class="row">
             <div class="col-md-12 wow zoomIn">
                 <div class="copyright">
-                    <p>Copyright 2019 Alexandre Colella.</p>
+                    <p>Copyright {{"now"|date("Y")}} Alexandre Colella.</p>
                 </div>
             </div>
         </div>
