add machicoulis, open links

--- a/templates/ggekos/index.html.twig
+++ b/templates/ggekos/index.html.twig
@@ -260,8 +260,8 @@
                         <div class="row">
                             {% for side_project in side_projects %}
                             <div class="col-md-3 col-sm-6 col-xs-6 mix wow flipInX">
-                                <a data-toggle="modal" data-target="#portfolio-modal" data-name="patty"
-                                    title="Shop web app “Patty”" href="{{ side_project.url }}" class="portfolio-box">
+                                <a data-name="patty"
+                                    title="Shop web app “Patty”" href="{{ side_project.url }}" target="_blank" class="portfolio-box">
                                     <div class="portfolio-img">
                                         <img src="{{ side_project.title }}" alt="">
                                     </div>
